[Window Capture] Inaccurate cursor position during window sharing on X11

{root_x, root_y} should be used to report the absolute cursor position in
MouseCursorMonitorX11.

Bug: chromium:778035
Change-Id: I421005d52786a57da8e8c3901bdf4afa2843ff24
Reviewed-on: https://webrtc-review.googlesource.com/15680
Reviewed-by: Jamie Walch <jamiewalch@chromium.org>
Commit-Queue: Zijie He <zijiehe@chromium.org>
Cr-Commit-Position: refs/heads/master@{#20432}